Bug 1194197: [MSE] Properly propagate decoding and network errors to media element. r=cpearce a=ritu

This is not 100% per spec, however neither is our handling of those errors in the media element.

--HG--
extra : rebase_source : 79c921084b61db689ae11b0f8c1f9f87916d3ad9
extra : histedit_source : 3a5aeb286b29b936ca441387cc42e5c646bd2c13